Testing and Integration fixes